--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1 class="title">Timer</h1>
+    <!-- <h1 class="title">Timer</h1> -->
     <div class="add-timer">
         <button class="add-timer-button">Add Timer</button>
     </div>
