--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timer</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 </head>
+
 <body>
-    <!-- <h1 class="title">Timer</h1> -->
-    <div class="add-timer">
-        <button class="add-timer-button">Add Timer</button>
-    </div>
-    <div class="add-timer-box">
-        <input type="text" id="time-slot-1" class="add-time-slot" value="00"/>
-        <div class="add-time-text">:</div>
-        <input type="text" id="time-slot-2" class="add-time-slot" value="00"/>
-        <div class="add-time-text">:</div>
-        <input type="text" id="time-slot-3" class="add-time-slot" value="00"/>
+
+    <div class="outer-timer-container">
+        <div class="title">
+            <h1>Timer</h1>
+        </div>
+        <div class="add-timer-box">
+            <input type="text" id="time-slot-1" class="add-time-slot" value="00" autocomplete="off" />
+            <div class="add-time-text">:</div>
+            <input type="text" id="time-slot-2" class="add-time-slot" value="00" autocomplete="off" />
+            <div class="add-time-text">:</div>
+            <input type="text" id="time-slot-3" class="add-time-slot" value="00" autocomplete="off" />
+        </div>
+        <div class="button-container">
+            <button class="add-timer-button">Start</button>
+            <button class="reset-timer-button">Reset</button>
+        </div>
     </div>
     <div class="timer-list">
+        <button id="clear-list">Clear Timer List</button>
         <!-- <div class="timer-clock">
             <div class="timer-clock-1">00</div>
             <div>:</div>
@@ -29,4 +39,5 @@
     </div>
     <script src="main.js"></script>
 </body>
+
 </html>
